--- a/admins-type.html
+++ b/admins-type.html
@@ -62,7 +62,8 @@
                                 <a class="nav-link" href="admins-viewlog.html">Dò bảng chấm công</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="admins-type.html" style="color: #000; background: #fff;">Thông tin chức vụ</a>
+                                <a class="nav-link" href="admins-type.html" style="color: #000; background: #fff;">Thông
+                                    tin chức vụ</a>
                             </li>
                         </ul>
                     </div>
@@ -116,8 +117,29 @@
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex" style="border-top-color: #CEA052;">
-                                <h5 class="m-0">Tìm kiếm</h5>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Chức vụ</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="box box-result">
                                 <table class="table table-hover" id="inOutTable">
@@ -165,6 +187,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
