--- a/admins-updateprofile.html
+++ b/admins-updateprofile.html
@@ -79,7 +79,76 @@
             <div class="row">
                 <div class="col">
                     <div class="content-wrapper">
-                        <h3 style="padding: 15px;">Waiting... !!</h3>
+                        <section class="content-header d-flex justify-content-between align-items-center">
+                            <h1 class="m-0">Cập nhật tài khoản</h1>
+                            <ul class="breadcrump d-flex flex-row p-0 m-0">
+                                <li>
+                                    <a href="#">
+                                        <i class="fas fa-home"></i>
+                                        <span>Trang chủ</span>
+                                    </a>
+                                </li>
+                                <li class="li-between">
+                                    <i class="fas fa-angle-right"></i>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span>Cập nhật tài khoản</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="content">
+                            <div class="box box-update d-flex flex-column">
+                                <div class="box-header d-flex" style="padding: 10px;">
+                                    <i class="fas fa-pen-square" style="font-size: 18px;"></i>
+                                </div>
+                                <div class="box-body p-2">
+                                    <div class="form-body">
+                                        <form action="" class="d-flex flex-column">
+                                            <div class="form-group">
+                                                <label for="">Họ tên*</label>
+                                                <input type="text" class="form-control" id="" placeholder="">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="">Tài khoản*</label>
+                                                <input type="text" class="form-control" id="" placeholder="">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="">Mật khẩu*</label>
+                                                <input type="text" class="form-control" id="" placeholder="">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="">Chức vụ</label>
+                                                <select class="form-control" id="">
+                                                    <option>Admin</option>
+                                                    <option>Ca trưởng</option>
+                                                    <option>Nhân viên</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="">Giới tính</label>
+                                                <select class="form-control" id="">
+                                                    <option>Nam</option>
+                                                    <option>Nữ</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group button-group d-flex flex-row">
+                                                <div class="form-group" style="margin-right: 20px;">
+                                                    <input type="submit" value="Lưu" class="btn btn-primary"
+                                                        style="padding: 4px 12px;">
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="submit" value="Quay lại" class="btn"
+                                                        style="padding: 4px 12px;" onclick="return back();">
+                                                </div>
+                                                <div class="cls"></div>
+                                            </div>
+                                        </form>
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
@@ -99,6 +168,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
