--- a/admins-viewlog.html
+++ b/admins-viewlog.html
@@ -59,7 +59,8 @@
                                 <a class="nav-link" href="admins.html">Thông tin nhân sự</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="admins-viewlog.html" style="color: #000; background: #fff;">Dò bảng chấm công</a>
+                                <a class="nav-link" href="admins-viewlog.html" style="color: #000; background: #fff;">Dò
+                                    bảng chấm công</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="admins-type.html">Thông tin chức vụ</a>
@@ -116,9 +117,45 @@
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex"
-                                style="border-top-color: #CEA052;">
-                                <h5 class="m-0">Tìm kiếm</h5>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Họ tên</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group text">
+                                            <label for="option1">Một ngày</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Nhiều ngày</label>
+                                            <div class="dateFromToInputs d-flex justify-content-between">
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                                <span class="form_from_to_separator d-flex align-items-center">〜</span>
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="box box-result">
                                 <table class="table" id="inOutTable">
@@ -186,6 +223,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
