--- a/admins.html
+++ b/admins.html
@@ -56,7 +56,8 @@
                         <ul class="nav nav-submenu align-items-center d-flex justify-content-center"
                             style="height: 50px;">
                             <li class="nav-item" style="border-left: 2px solid #fff;">
-                                <a class="nav-link" href="admins.html" style="color: #000; background: #fff;">Thông tin nhân sự</a>
+                                <a class="nav-link" href="admins.html" style="color: #000; background: #fff;">Thông tin
+                                    nhân sự</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="admins-viewlog.html">Dò bảng chấm công</a>
@@ -116,8 +117,41 @@
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex" style="border-top-color: #CEA052;">
-                                <h5>Tìm kiếm</h5>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Họ tên</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Chức vụ</label>
+                                            <select class="form-control" id="">
+                                                <option>Tất cả</option>
+                                                <option>Ca trưởng</option>
+                                                <option>Admin1</option>
+                                                <option>Nhân viên 1</option>
+                                                <option>Quản lý</option>
+                                                <option>Admin</option>
+                                                <option>Nhân viên </option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="box box-result">
                                 <table class="table table-hover" id="inOutTable">
@@ -170,6 +204,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
