--- a/cards-active.html
+++ b/cards-active.html
@@ -119,9 +119,43 @@
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex"
-                                style="border-top-color: #CEA052;">
-                                <h5 class="m-0">Tìm kiếm</h5>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Mã thẻ</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group text">
+                                            <label for="option1">STT</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Tên loại xe</label>
+                                            <select class="form-control" id="">
+                                                <option>Chọn loại xe</option>
+                                                <option>Xe đạp điện</option>
+                                                <option>Xe oto</option>
+                                                <option>Xe máy</option>
+                                                <option>Xe tay ga</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="box box-result">
                                 <table class="table table-hover" id="inOutTable">
@@ -168,6 +202,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
