--- a/companies.html
+++ b/companies.html
@@ -56,10 +56,11 @@
                         <ul class="nav nav-submenu align-items-center d-flex justify-content-center"
                             style="height: 50px;">
                             <li class="nav-item" style="border-left: 2px solid #fff;">
-                                <a class="nav-link" href="companies.html" style="color: #000; background: #fff;">Quản lý công ty</a>
+                                <a class="nav-link" href="companies.html" style="color: #000; background: #fff;">Quản lý
+                                    công ty</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Quản lý dự án</a>
+                                <a class="nav-link" href="projects.html">Quản lý dự án</a>
                             </li>
                         </ul>
                     </div>
@@ -93,7 +94,78 @@
             <div class="row">
                 <div class="col">
                     <div class="content-wrapper">
-                        <h3 style="padding: 15px;">Waiting... !!</h3>
+                        <section class="content-header d-flex justify-content-between align-items-center">
+                            <h1 class="m-0">Danh sách công ty</h1>
+                            <ul class="breadcrump d-flex flex-row p-0 m-0">
+                                <li>
+                                    <a href="#">
+                                        <i class="fas fa-home"></i>
+                                        <span>Trang chủ</span>
+                                    </a>
+                                </li>
+                                <li class="li-between">
+                                    <i class="fas fa-angle-right"></i>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span>Danh sách công ty</span>
+                                    </a>
+                                </li>
+                            </ul>
+                        </section>
+                        <section class="content">
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Tên công ty</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
+                            <div class="box box-result">
+                                <table class="table table-hover" id="inOutTable">
+                                    <thead>
+                                        <tr>
+                                            <th class="checkbox-item">
+                                                <input type="checkbox">
+                                            </th>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Tên công ty</th>
+                                            <th scope="col">Địa chỉ</th>
+                                            <th scope="col" style="width: 100px;">Chỉnh sửa</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                                <div class="form-group button-group d-flex flex-row">
+                                    <div class="form-group">
+                                        <input type="submit" value="Thêm mới" class="btn btn-success"
+                                            style="font-size: 14px; margin-right: 20px;">
+                                    </div>
+                                    <div class="form-group">
+                                        <input type="submit" value="Xóa" class="btn btn-danger"
+                                            style="font-size: 14px;">
+                                    </div>
+                                </div>
+                            </div>
+                        </section>
                     </div>
                 </div>
             </div>
@@ -113,6 +185,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
