--- a/revenue-index.html
+++ b/revenue-index.html
@@ -56,7 +56,8 @@
                         <ul class="nav nav-submenu align-items-center d-flex justify-content-center"
                             style="height: 50px;">
                             <li class="nav-item" style="border-left: 2px solid #fff;">
-                                <a class="nav-link" href="revenue-index.html" style="color: #000; background: #fff;">Thống kê doanh thu</a>
+                                <a class="nav-link" href="revenue-index.html"
+                                    style="color: #000; background: #fff;">Thống kê doanh thu</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="revenue-priceformula1.html">CT TT theo công văn</a>
@@ -119,8 +120,51 @@
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex" style="border-top-color: #CEA052;">
-                                <h5 class="m-0">Tìm kiếm</h5>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group">
+                                            <label for="">Nhân viên</label>
+                                            <select class="form-control" id="">
+                                                <option>Tất cả</option>
+                                                <option>cty2 - quản lý 1</option>
+                                                <option>Dinh Duc Lieu</option>
+                                                <option>catruong12</option>
+                                                <option>Staff1</option>
+                                                <option>congty286</option>
+                                                <option>SPM</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Loại thẻ</label>
+                                            <select class="form-control" id="">
+                                                <option>Tất cả</option>
+                                                <option>Vãng lai</option>
+                                                <option>Vé tháng</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group text">
+                                            <label for="option1">Một ngày</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Nhiều ngày</label>
+                                            <div class="dateFromToInputs d-flex justify-content-between">
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                                <span class="form_from_to_separator d-flex align-items-center">〜</span>
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
                             </div>
                             <div class="box box-result">
                                 <table class="table table-bordered" id="revenueIndexTable">
@@ -163,6 +207,7 @@
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
     <script src="./js/revenue-index.js"></script>
+    <script src="./js/accordion.js"></script>
 </body>
 
 </html>
