--- a/cards-active.html
+++ b/cards-active.html
@@ -93,6 +93,9 @@
                 </ul>
             </div>
         </div>
+        <div class="advertisement-banner position-fixed">
+            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
+        </div>
     </header>
     <main>
         <div class="container">
