--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
                 </ul>
             </div>
         </div>
+        <div class="advertisement-banner position-fixed">
+            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
+        </div>
     </header>
     <main>
         <div class="container">
             <div class="row">
                 <div class="col">
-                    <div class="content-wrapper">
+                    <div class="content-wrapper" style="padding: 15px;">
                         <h3>Parking Management</h3>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel mollitia assumenda alias quasi
                             at laudantium. Quisquam nostrum sapiente accusantium repellat voluptate praesentium enim
