--- a/revenue-priceformula2.html
+++ b/revenue-priceformula2.html
@@ -62,7 +62,8 @@
                                 <a class="nav-link" href="revenue-priceformula1.html">CT TT theo công văn</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="revenue-priceformula2.html" style="color: #000; background: #fff;">CT TT lũy tiến</a>
+                                <a class="nav-link" href="revenue-priceformula2.html"
+                                    style="color: #000; background: #fff;">CT TT lũy tiến</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="revenue-priceformula3.html">CT tổng hợp</a>
@@ -92,6 +93,9 @@
                     </li>
                 </ul>
             </div>
+        </div>
+        <div class="advertisement-banner position-fixed">
+            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
         </div>
     </header>
     <main>
