--- a/cards.html
+++ b/cards.html
@@ -91,6 +91,9 @@
                 </ul>
             </div>
         </div>
+        <div class="advertisement-banner position-fixed">
+            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
+        </div>
     </header>
     <main>
         <div class="container">
@@ -220,6 +223,7 @@
     <script src="./js/bootstrap.min.js"></script>
     <script src="./js/jquery-1.12.4.js"></script>
     <script src="./js/jquery-ui.js"></script>
+    <script src="./js/cards.js"></script>
     <script src="./js/accordion.js"></script>
 </body>
 
