--- a/checkinoutlogs-monthlycard.html
+++ b/checkinoutlogs-monthlycard.html
@@ -53,7 +53,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <ul class="nav nav-submenu align-items-center d-flex justify-content-center" style="height: 50px;">
+                        <ul class="nav nav-submenu align-items-center d-flex justify-content-center"
+                            style="height: 50px;">
                             <li class="nav-item" style="border-left: 2px solid #fff;">
                                 <a class="nav-link" href="checkinoutlogs-card.html">Tra cứu vào ra</a>
                             </li>
@@ -89,6 +90,9 @@
                 </ul>
             </div>
         </div>
+        <div class="advertisement-banner position-fixed">
+            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
+        </div>
     </header>
     <main>
         <div class="container">
@@ -115,46 +119,46 @@
                             </ul>
                         </section>
                         <section class="content">
-                                <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
-                                        <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
-                                        <div class="panel">
-                                            <form>
-                                                <div class="form-group text">
-                                                    <label for="option1">Tên KH</label>
-                                                    <input type="text" name="option1" class="form-control" id="option1">
-                                                </div>
-                                                <div class="form-group text">
-                                                    <label for="option1">Công ty</label>
-                                                    <input type="text" name="option1" class="form-control" id="option1">
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="">Nhiều ngày</label>
-                                                    <div class="dateFromToInputs d-flex justify-content-between">
-                                                        <div class="form-group text">
-                                                            <input type="text" class="form-control" value="">
-                                                        </div>
-                                                        <span class="form_from_to_separator d-flex align-items-center">〜</span>
-                                                        <div class="form-group text">
-                                                            <input type="text" class="form-control" value="">
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label for="">Giới hạn</label>
-                                                    <select class="form-control" id="">
-                                                        <option>10</option>
-                                                        <option>20</option>
-                                                        <option>50</option>
-                                                        <option>80</option>
-                                                        <option>100</option>
-                                                    </select>
-                                                </div>
-                                                <div class="form-group">
-                                                    <button type="submit" class="btn btn-primary">Tìm kiếm</button>
-                                                </div>
-                                            </form>
+                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
+                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
+                                <div class="panel">
+                                    <form>
+                                        <div class="form-group text">
+                                            <label for="option1">Tên KH</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
                                         </div>
-                                    </div>
+                                        <div class="form-group text">
+                                            <label for="option1">Công ty</label>
+                                            <input type="text" name="option1" class="form-control" id="option1">
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Nhiều ngày</label>
+                                            <div class="dateFromToInputs d-flex justify-content-between">
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                                <span class="form_from_to_separator d-flex align-items-center">〜</span>
+                                                <div class="form-group text">
+                                                    <input type="text" class="form-control" value="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label for="">Giới hạn</label>
+                                            <select class="form-control" id="">
+                                                <option>10</option>
+                                                <option>20</option>
+                                                <option>50</option>
+                                                <option>80</option>
+                                                <option>100</option>
+                                            </select>
+                                        </div>
+                                        <div class="form-group">
+                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
+                                        </div>
+                                    </form>
+                                </div>
+                            </div>
                             <div class="box box-result">
                                 <table class="table" id="inOutTable">
                                     <thead>
