--- a/admins-type.html
+++ b/admins-type.html
@@ -91,9 +91,6 @@
                 </ul>
             </div>
         </div>
-        <div class="advertisement-banner position-fixed">
-            <img src="./image/logo/logo-spm.png" alt="" srcset="" style="width: 165px; height: auto;">
-        </div>
     </header>
     <main>
         <div class="container">
@@ -161,8 +158,10 @@
                                 </table>
                                 <div class="form-group button-group d-flex flex-row">
                                     <div class="form-group">
-                                        <input type="submit" value="Thêm mới" class="btn btn-success"
-                                            style="font-size: 14px; margin-right: 20px;">
+                                        <a href="admins-type-update.html">
+                                            <input type="submit" value="Thêm mới" class="btn btn-success"
+                                                style="font-size: 14px; margin-right: 20px;">
+                                        </a>
                                     </div>
                                     <div class="form-group">
                                         <input type="submit" value="Xóa" class="btn btn-danger"
