--- a/projects-update.html
+++ b/projects-update.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./css/all.min.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/projects.css">
+    <link rel="stylesheet" href="./css/projects-update.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/footer.css">
@@ -96,7 +96,7 @@
                 <div class="col">
                     <div class="content-wrapper">
                         <section class="content-header d-flex justify-content-between align-items-center">
-                            <h1 class="m-0">Danh sách dự án</h1>
+                            <h1 class="m-0">Thêm mới</h1>
                             <ul class="breadcrump d-flex flex-row p-0 m-0">
                                 <li>
                                     <a href="#">
@@ -112,70 +112,52 @@
                                         <span>Danh sách dự án</span>
                                     </a>
                                 </li>
+                                <li class="li-between">
+                                    <i class="fas fa-angle-right"></i>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <span>Thêm mới</span>
+                                    </a>
+                                </li>
                             </ul>
                         </section>
                         <section class="content">
-                            <div class="box box-search d-flex flex-column" style="border-top-color: #CEA052;">
-                                <h5 class="accordion" style="border-bottom: 1px solid #f4f4f4;">Tìm kiếm</h5>
-                                <div class="panel">
-                                    <form>
-                                        <div class="form-group text">
-                                            <label for="option1">Tên dự án</label>
-                                            <input type="text" name="option1" class="form-control" id="option1">
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="">Tên công ty</label>
-                                            <select class="form-control" id="">
-                                                <option>-</option>
-                                                <option>Cty 286</option>
-                                                <option>Cty 1</option>
-                                                <option>Cty 2</option>
-                                                <option>Cty 3</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <label for="">Giới hạn</label>
-                                            <select class="form-control" id="">
-                                                <option>10</option>
-                                                <option>20</option>
-                                                <option>50</option>
-                                                <option>80</option>
-                                                <option>100</option>
-                                            </select>
-                                        </div>
-                                        <div class="form-group">
-                                            <button type="submit" class="btn btn-primary">Tìm kiếm</button>
-                                        </div>
-                                    </form>
+                            <div class="box box-update d-flex flex-column">
+                                <div class="box-header d-flex" style="padding: 10px;">
+                                    <i class="fas fa-pen-square" style="font-size: 18px;"></i>
                                 </div>
-                            </div>
-                            <div class="box box-result">
-                                <table class="table table-hover" id="inOutTable">
-                                    <thead>
-                                        <tr>
-                                            <th class="checkbox-item">
-                                                <input type="checkbox">
-                                            </th>
-                                            <th scope="col">ID</th>
-                                            <th scope="col">Tên dự án</th>
-                                            <th scope="col">Tên công ty</th>
-                                            <th scope="col">Địa chỉ</th>
-                                            <th scope="col" style="width: 100px;">Chỉnh sửa</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody>
-                                    </tbody>
-                                </table>
-                                <div class="form-group button-group d-flex flex-row">
-                                    <div class="form-group">
-                                        <a href="projects-update.html">
-                                            <input type="submit" value="Thêm mới" class="btn btn-success"
-                                                style="font-size: 14px; margin-right: 20px;">
-                                        </a>
-                                    </div>
-                                    <div class="form-group">
-                                        <input type="submit" value="Xóa" class="btn btn-danger"
-                                            style="font-size: 14px;">
+                                <div class="box-body p-2">
+                                    <div class="form-body">
+                                        <form>
+                                            <div class="form-group text">
+                                                <label for="option1">Tên dự án*</label>
+                                                <input type="text" name="option1" class="form-control" id="option1">
+                                            </div>
+                                            <div class="form-group text">
+                                                <label for="option1">Địa chỉ</label>
+                                                <input type="text" name="option1" class="form-control" id="option1">
+                                            </div>
+                                            <div class="form-group">
+                                                <label for="">Tên công ty</label>
+                                                <select class="form-control" id="">
+                                                    <option>Cong ty 286</option>
+                                                    <option>cty 1</option>
+                                                    <option>cty 2</option>
+                                                    <option>cty 3</option>
+                                                </select>
+                                            </div>
+                                            <div class="form-group button-group d-flex flex-row">
+                                                <div class="form-group">
+                                                    <button onclick="saveData()" class="btn btn-primary"
+                                                        style="font-size: 14px; margin-right: 20px;">Lưu</button>
+                                                </div>
+                                                <div class="form-group">
+                                                    <input type="submit" value="Quay lại" class="btn btn-secondary"
+                                                        style="font-size: 14px;">
+                                                </div>
+                                            </div>
+                                        </form>
                                     </div>
                                 </div>
                             </div>
