remove some columns for list in/out

--- a/checkinoutlogs-card.html
+++ b/checkinoutlogs-card.html
@@ -163,21 +163,17 @@
                                 <table class="table" id="inOutTable">
                                     <thead>
                                         <tr>
-                                            <th scope="col">ID</th>
                                             <th scope="col">STT</th>
+                                            <th scope="col">Số thẻ</th>
                                             <th scope="col">Mã thẻ</th>
                                             <th scope="col">Thời gian vào</th>
                                             <th scope="col">Thời gian ra</th>
                                             <th scope="col">Biển số</th>
                                             <th scope="col">Người vào</th>
-                                            <th scope="col">Ký hiệu</th>
                                             <th scope="col">Người ra</th>
                                             <th scope="col">Tên loại xe</th>
                                             <th scope="col">Mất thẻ</th>
                                             <th scope="col">Giá tiền</th>
-                                            <th scope="col">Máy tính</th>
-                                            <th scope="col">Tài khoản</th>
-                                            <th scope="col">Thẻ tháng</th>
                                         </tr>
                                     </thead>
                                     <tbody>
